Fix h2 alignment

--- a/Parte1/css/style.css
+++ b/Parte1/css/style.css
@@ -2,6 +2,12 @@
 	box-sizing: border-box;
 }
 
+html {
+	font-family: "Montserrat", sans-serif;
+	color: white;
+	background-color: #2b2b2b;
+}
+
 header h1 {
 	text-align: center;
 }
@@ -15,15 +21,15 @@ img {
 
 cite {
 	display: block;
-	padding: 20px;
+	margin: 40px;
 	text-align: center;
 	font-size: 15px;
 }
 
-html {
-	font-family: "Montserrat", sans-serif;
-	color: white;
-	background-color: #2b2b2b;
+main h2 {
+	text-align: center;
+	margin-top: 0px;
+	margin-bottom: 40px;
 }
 
 a {
